<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.Band.BandActivity"
    tools:showIn="@layout/band"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/band_frag_text04"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/band_frag_text01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/band_frag_text03"
        android:textSize="16sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/band_frag_text05"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/band_frag_text02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/band_frag_text03"
        android:textSize="16sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/band_frag_text06"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/band_frag_text03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/band_frag_text03"
        android:textSize="16sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/band_frag_text07"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/band_frag_text04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/band_frag_text03"
        android:textSize="16sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/band_frag_btn01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frag_text01"
            />

        <Button
            android:id="@+id/band_frag_btn02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frag_text02"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/band_frag_btn03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frag_text08"
            />
        <Button
            android:id="@+id/band_frag_btn04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frag_text09"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/band_frag_btn05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/band_frag_text10"
            />
    </LinearLayout>
</LinearLayout>
